@@ -4,7 +4,8 @@ package com.wsk.token;
  * Created by wsk1103 on 2017/4/28.
  */
 
-import sun.misc.BASE64Encoder;
+//import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
@@ -38,7 +39,7 @@ public class TokenProccessor {
      *
      * @return
      */
-    public String makeToken() {  //checkException
+    public byte[] makeToken() {  //checkException
         //  7346734837483  834u938493493849384  43434384
         String token = (System.currentTimeMillis() + new Random().nextInt(999999999)) + "";
         //数据指纹   128位长   16个字节  md5
@@ -46,7 +47,8 @@ public class TokenProccessor {
             MessageDigest md = MessageDigest.getInstance("md5");
             byte md5[] = md.digest(token.getBytes());
             //base64编码--任意二进制编码明文字符   adfsdfsdfsf
-            BASE64Encoder encoder = new BASE64Encoder();
+            Base64.Encoder encoder = Base64.getEncoder();
+            //BASE64Encoder encoder = new BASE64Encoder();
             return encoder.encode(md5);
         } catch (NoSuchAlgorithmException e) {
             throw new RuntimeException(e);
